Refactored the name of the package, and changed the licensing

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <version>3.5.6</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.apple</groupId>
+    <groupId>com.wappy</groupId>
     <artifactId>Weather</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>Weather</name>
@@ -68,6 +68,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>com.wappy.weather.WeatherApplication</mainClass>
+                </configuration>
             </plugin>
         </plugins>
     </build>
